fix: fixed header/spacing

--- a/popup.css
+++ b/popup.css
@@ -10,9 +10,12 @@ div {
 }
 
 #header {
+    position: fixed;
+    top: 0;
+    width: 100%;
     background:#eee;
     border-bottom:1px solid #aaa;
-    padding:7px;
+    padding:7px 6px 0;
     margin-bottom:2px;
 }
 
